# SPARTA_PROJECT_4TH_E_COMMERCE

./: .claudignore  .gitignore  CLAUDE.md  main.py  pyproject.toml
.history/: .gitignore_20260506150903  .gitignore_20260506150917
jinsik/: processing.ipynb
juha/: Bertopic_Aethleijure.ipynb
김선영/: 260408.ipynb
김선영/crawling/: 02.FILA_naverstore_review.py
김선영/notebook/: EDA_룰루레몬.ipynb  preprocessing_룰루레몬.ipynb  preprocessing_안다르.ipynb  preprocessing_알로요가.ipynb  preprocessing_휠라.ipynb  preprocessing_휠라_네이버스토어.ipynb  preprocessing_휠라_무신사.ipynb  preprocessing_휠라_자사몰.ipynb  preprocessing_휠라네이버스토어.ipynb  전처리_휠라_네이버스토어.ipynb  전처리_휠라_무신사.ipynb  전처리_휠라_자사몰.ipynb
김혜수/: xexymix_men_eda.ipynb  사용자_사전.ipynb  전처리_룰루_무신사.ipynb  전처리_룰루_자사몰.ipynb  형태소_사전 (1).ipynb  형태소_사전.ipynb  휠라 API 네이버 블로그.ipynb
송원우/: MEMORY.md  absa_labeling_260504.ipynb  absa_sampling.py  basic_eda_260429.ipynb  check_tokens.py  checkpoint.json  checkpoint.txt  fila_prepreceed.ipynb  fila_크롤링.ipynb  generate_report.py  lululemon_homepage_review_preprocessed_260429.ipynb  lululemon_preproceed_260416.ipynb  lululemon_preproceed_260417.ipynb  lululemon_크롤링.ipynb  master_preprocessed_260430.ipynb  musinsa_크롤링.ipynb  outlier_check.ipynb  preprocess.py  wordcloud_260501.ipynb  xexymix_review_2.ipynb
송원우/absa/: absa_guideline_v2.md  absa_relabel.py
송원우/absa_L1/: L1_실행노트북.py  L1_작업매뉴얼.md  absa.py
송원우/absa_exaone/: ABSA_파이프라인_진행보고.md  absa_phase1_sandbox.ipynb  absa_v10.py  absa_v9.py  apply_relabel_v24.py  extract_boundary_cases.py  extract_spotcheck_30.py  kappa_spotcheck.py  run_fila_complement.ipynb  run_phase2_pipeline.py  test.ipynb
송원우/data/: fila_product_master_260420.csv  fila_snapshot_master_260421.csv  fila_snapshot_master_260421.numbers  fila_snapshot_master_260422.csv  lululemon_snapshot_master_20260417.csv  (+4 more)
표주하/: eda.ipynb
(+33 files in other folders)
