[project]
name = "sparta-project-4th-e-commerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pingouin>=0.6.1",
    "pyzmq>=27.1.0",
    "scikit-posthocs>=0.12.0",
    "statsmodels>=0.14.6",
]
