[project]
name = "sparta-project-4th-e-commerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bertopic>=0.17.4",
    "cloudscraper>=1.2.71",
    "curl-cffi>=0.15.0",
    "hdbscan>=0.8.42",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "kiwipiepy>=0.23.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pingouin>=0.6.1",
    "playwright>=1.58.0",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "requests>=2.33.1",
    "scikit-posthocs>=0.12.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.56.0",
    "umap-learn>=0.5.12",
    "wordcloud>=1.9.6",
]
