[project]
name = "sparta-project-4th-e-commerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "kiwi>=10.3.1",
    "kiwipiepy>=0.23.1",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "numpy>=2.4.4",
    "ollama>=0.6.2",
    "openai>=2.36.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pingouin>=0.6.1",
    "pyzmq>=27.1.0",
    "scikit-posthocs>=0.12.0",
    "statsmodels>=0.14.6",
]
